# homegate-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: RELEASE_TEMPLATE.md  changelog-config.json
.github/workflows/: ci.yml  docs.yml  lint.yml  quality.yml  release-crates.yml  release.yml
resources/test/: request-1.json  result-1.json  result-2.json  search.json
src/: config.rs  error.rs  lib.rs  main.rs  mcp.rs
src/api/: app_id.rs  geo.rs  mod.rs  request.rs  search.rs
src/models/: address.rs  geo_coords.rs  listing.rs  location.rs  mod.rs  paginated.rs  realestate.rs
tests/: integration_tests.rs  unit_app_id.rs  unit_models.rs  unit_request.rs  unit_search.rs
tests/common/: fixtures.rs  mod.rs
tests/unit/: app_id_tests.rs  request_tests.rs
