[package]
name = "homegate"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2018"

[dependencies]
base64 = "0"
chrono = "0.4"
hmac = "0.12"
reqwest = { version="0.11", features=["json"]}
serde = { version="1", features=["derive"]}
serde_json = "1"
sha2 = "0.10"
byteorder = "1"
tokio = { version = "1", features = ["full"] }