[package]
name = "homegate"
description = "Library to interact with homegate.ch's unofficial API"
license = "MIT"
version = "1.0.1"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2021"

[dependencies]
base64 = "0.22.0"
chrono = "0.4"
hmac = "0.12"
reqwest = { version= "0.12.2", features=["json"]}
serde = { version="1", features=["derive"]}
serde_json = "1"
sha2 = "0.10"
byteorder = "1.5"
tokio = { version = "1", features = ["full"] }
