[package]
name = "homegate"
description = "Library to interact with homegate.ch's unofficial API"
license = "MIT"
version = "1.0.1"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2021"
default-run = "homegate"

[[bin]]
name = "homegate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
base64 = "0.22.0"
chrono = "0.4"
hmac = "0.12"
reqwest = { version= "0.12.2", features=["json"]}
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version="1", features=["derive"]}
serde_json = "1"
sha2 = "0.10"
byteorder = "1.5"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tracing-subscriber = "0.3"
wiremock = "0.6"
tokio-test = "0.4"
